<resources>
    <string name="app_name">NewProject</string>
    <string name="chris_nhemsworth">Chris Hemsworth</string>
    <string name="mark_nruffalo">Mark \nRuffalo</string>
    <string name="chris_nevans">Chris \nEvans</string>
    <string name="robert_ndowney_jr">Robert \nDowney Jr.</string>
    <string name="cast">Cast</string>
    <string name="storyline_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="storyline">Storyline</string>
    <string name="_125_reviews">125 Reviews</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="avengers_nend_game">Avengers:\nEnd Game</string>
    <string name="_13">13+</string>
    <string name="back">Back</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="img3">img3</string>
    <string name="img2">img2</string>
    <string name="img1">img1</string>
    <string name="img0">img0</string>
    <string name="star4">star4</string>
    <string name="star3">star3</string>
    <string name="star2">star2</string>
    <string name="star1">star1</string>
    <string name="star0">star0</string>
    <string name="chevron">chevron</string>
    <string name="background_img">background img</string>
    <string name="img_view">img view</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="_137_min">137 min</string>
    <string name="action_adventure_drama">Action, Adventure, Drama</string>
    <string name="movies_list">Movies list</string>
    <string name="reviews">\" reviews\"</string>
    <string name="age16">16+</string>
    <string name="age13">13+</string>
    <string name="min">%1$d min</string>
    <string name="add_to_calendar">add to calendar</string>
    <string name="movie_transition">movie_transition</string>
    <!--    <string name="min1">$1%d minutes</string>-->

</resources>