<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:src="@drawable/orig"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <ImageView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:src="@drawable/gradient"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="@id/imageView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView"

            />



        <ImageView
            android:id="@+id/chevron"
            android:layout_width="6dp"
            android:layout_height="10dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="59dp"
            android:src="@drawable/path"
            android:background="@color/dark_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/back"
            android:textColor="@color/light_light"
            android:alpha="0.2"
            app:layout_constraintStart_toEndOf="@id/chevron"
            app:layout_constraintTop_toTopOf="@id/chevron"
            app:layout_constraintBottom_toBottomOf="@id/chevron"
            android:clickable="true"
            android:onClick="backClick"
            />


        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/_13"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/movieName"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/movieName"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="254dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-medium"
            android:lines="2"
            android:text="Avengers: \nEnd Game"
            android:textAlignment="viewStart"
            android:textColor="@color/light_light"
            android:textStyle="bold"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineHeight="36dp" />

        <TextView
            android:id="@+id/movieGenre"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/action_adventure_fantasy"
            android:textColor="@color/rasp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieName" />

        <ImageView
            android:id="@+id/star0"
            android:layout_width="13.02dp"
            android:layout_height="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/star2"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieGenre" />
        <ImageView
            android:id="@+id/star1"
            android:layout_width="13.02dp"
            android:layout_height="12dp"
            app:layout_constraintStart_toStartOf="@id/star0"
            app:layout_constraintTop_toBottomOf="@id/movieGenre"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/star2"


            />
        <ImageView
            android:id="@+id/star2"
            android:layout_width="13.02dp"
            android:layout_height="12dp"
            app:layout_constraintStart_toStartOf="@id/star1"
            app:layout_constraintTop_toBottomOf="@id/movieGenre"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/star2"

            />
        <ImageView
            android:id="@+id/star3"
            android:layout_width="13.02dp"
            android:layout_height="12dp"
            app:layout_constraintStart_toStartOf="@id/star2"
            app:layout_constraintTop_toBottomOf="@id/movieGenre"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/star2"

            />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="13.02dp"
            android:layout_height="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/star"
            app:layout_constraintStart_toStartOf="@id/star3"

            app:layout_constraintTop_toBottomOf="@id/movieGenre" />

        <TextView
            android:id="@+id/movieReviews"
            android:layout_width="112dp"
            android:layout_height="20dp"
            android:layout_marginStart="8.89dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/_125_reviews"
            android:textAllCaps="true"
            android:textColor="@color/reviews"
            app:layout_constraintStart_toEndOf="@id/star4"
            app:layout_constraintTop_toBottomOf="@id/movieGenre" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/storyline"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieReviews" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            android:lineSpacingExtra="4sp"
            android:layout_marginTop="4dp"
            android:alpha="0.75"
            android:fontFamily="sans-serif-thin"
            android:text="@string/storyline_text"
            android:textColor="@color/white"

            android:gravity="center_vertical"

            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView3" />

        <TextView
            android:textSize="12sp"
            android:id="@+id/story"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/cast"
            android:textColor="@color/light_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView4" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:id="@+id/rvActors"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="7dp"
            android:layout_marginStart="7dp"
            app:layout_constraintTop_toBottomOf="@id/story"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>