<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="296dp"
    android:background="@color/dark_dark"
    android:layout_marginBottom="11dp"
    android:transitionName="@{@string/movie_transition(movie.id)}"
    >

    <View
        android:id="@+id/bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="11dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:clickable="true"
        />
    <ImageView
        android:id="@+id/bgg"
        android:layout_width="0dp"
        android:layout_height="248dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        app:layout_constraintTop_toTopOf="@id/bg"
        app:layout_constraintStart_toStartOf="@id/bg"
        app:layout_constraintEnd_toEndOf="@id/bg"
        app:layout_constraintBottom_toBottomOf="@id/bg"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/movie5"
        android:scaleType="centerCrop"
        />
    <View
        android:id="@+id/bgGrad"
        android:layout_width="0dp"
        android:layout_height="248dp"
        android:adjustViewBounds="true"
        android:background="@drawable/gradient"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@id/bgg"
        app:layout_constraintEnd_toEndOf="@id/bgg"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/bgg"
        app:layout_constraintTop_toTopOf="@id/bgg"
        app:layout_constraintVertical_bias="1.0"
        />

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="24dp"
        android:layout_height="24dp"

        app:layout_constraintStart_toStartOf="@id/bgg"
        app:layout_constraintTop_toTopOf="@id/bgg"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:src="@drawable/rectangle"
        android:alpha="0.9"
        />
    <TextView
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="16dp"
        app:layout_constraintStart_toStartOf="@id/rectangle"
        app:layout_constraintEnd_toEndOf="@id/rectangle"
        app:layout_constraintTop_toTopOf="@id/rectangle"
        app:layout_constraintBottom_toBottomOf="@id/rectangle"
        android:layout_marginTop="4sp"
        android:layout_marginBottom="4sp"
        android:textStyle="bold"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:layout_centerVertical="true"
        android:text="@string/_13"
        android:gravity="center_horizontal|center_vertical"
        />
    <ImageView
        android:id="@+id/like"
        android:layout_width="16dp"
        android:layout_height="14dp"
        app:layout_constraintEnd_toEndOf="@id/bgg"
        app:layout_constraintTop_toTopOf="@id/bgg"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/like"
        android:alpha="0.75"
        />
    <TextView
        android:id="@+id/genre"
        android:layout_width="146dp"
        android:layout_height="12dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/action_adventure_drama"
        android:lineSpacingExtra="3sp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="@id/bgg"
        app:layout_constraintBottom_toBottomOf="@id/bgg"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="22dp"
        android:textColor="@color/rasp"
        android:textSize="8sp"
        />
    <ImageView
        android:id="@+id/star_icon"
        android:layout_width="8dp"
        android:layout_height="8dp"
        app:layout_constraintStart_toStartOf="@id/bgg"
        app:layout_constraintBottom_toBottomOf="@id/bgg"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/star"
        android:adjustViewBounds="true"

        />
    <ImageView
        android:id="@+id/star_icon2"
        android:layout_width="8dp"
        android:layout_height="8dp"
        app:layout_constraintStart_toEndOf="@id/star_icon"
        app:layout_constraintBottom_toBottomOf="@id/bgg"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/star"
        android:adjustViewBounds="true"

        />
    <ImageView
        android:id="@+id/star_icon3"
        android:layout_width="8dp"
        android:layout_height="8dp"
        app:layout_constraintStart_toEndOf="@id/star_icon2"
        app:layout_constraintBottom_toBottomOf="@id/bgg"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/star"
        android:adjustViewBounds="true"

        />
    <ImageView
        android:id="@+id/star_icon4"
        android:layout_width="8dp"
        android:layout_height="8dp"
        app:layout_constraintStart_toEndOf="@id/star_icon3"
        app:layout_constraintBottom_toBottomOf="@id/bgg"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/star"
        android:adjustViewBounds="true"

        />
    <ImageView
        android:id="@+id/star_icon5"
        android:layout_width="8dp"
        android:layout_height="8dp"
        app:layout_constraintStart_toEndOf="@id/star_icon4"
        app:layout_constraintBottom_toBottomOf="@id/bgg"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/star"
        android:adjustViewBounds="true"

        />
    <TextView
        android:id="@+id/reviews"
        app:layout_constraintStart_toEndOf="@id/star_icon5"
        app:layout_constraintBottom_toBottomOf="@id/bgg"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="8dp"


        android:layout_width="53dp"
        android:layout_height="12dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/_125_reviews"
        android:textSize="8sp"
        android:textColor="@color/dark_grey"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:lineSpacingExtra="3sp"
        android:gravity="center_vertical"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="132dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/bg"
        app:layout_constraintStart_toStartOf="@id/bg"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/avengers_end_game"
        android:textStyle="bold"
        android:textColor="@color/light_light"
        android:lineSpacingExtra="4sp"
        android:gravity="center_vertical"
        android:textSize="14sp"
        />
    <TextView
        android:id="@+id/duration"
        android:layout_width="154dp"
        android:layout_height="12dp"
        android:layout_centerVertical="true"
        android:text="@string/_137_min"
        android:textSize="8sp"
        android:textColor="@color/dark_grey"
        android:lineSpacingExtra="3sp"
        android:gravity="left"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/bg"
        android:textAllCaps="true"
        android:textStyle="bold"
        />






</androidx.constraintlayout.widget.ConstraintLayout>